--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Abdul Haseeb</h1>
+    <header>
+      <nav class="navbar">
+        <div class="logo">
+          <a href="#">MEHTAB <span>A</span>LAM</a>
+        </div>
+        <ul class="nav-links">
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">SERVICES</a></li>
+          <li><a href="#">PROJECTS</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
+      </nav>
+    </header>
     <script src="./script.js"></script>
   </body>
 </html>
